--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     text-align: center;
     font-family: Verdana, arial, sans-serif;
+    font-size: 15px;
+    margin: 122px
     
 }
 
@@ -25,12 +27,12 @@ h3 {
 }
 
 img {
-    width: 450px;
+    width: 505px;
     height: auto;
 }
 
 .img-pages {
-    width: 990px;
+    width: 1050px;
     height: auto;
 }
 
