--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body {
     text-align: center;
-    font-family: Verdana, arial, sans-serif;
+    font-family: raleway,Verdana, arial, sans-serif;
     font-size: 15px;
-    margin: 122px
     
 }
 
@@ -27,7 +26,7 @@ h3 {
 }
 
 img {
-    width: 505px;
+    width: 500px;
     height: auto;
 }
 
