--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,15 @@
 body {
     text-align: center;
-    font-family: raleway,Verdana, arial, sans-serif;
-    font-size: 15px;
+    font-family: Thasadith, "Open Sans", raleway,Verdana, arial, sans-serif;
+    font-size: 17px;
 }
 
 h1,
 h2 {
-    font-family: lucida handwriting; arial; sans-serif;
-    color: goldenrod;   
+    font-family: "Shadows Into Light Two", Thasadith, lucida handwriting; arial; sans-serif;
+    color: goldenrod;  
+    font-weight: 500; 
+    padding-bottom: 10px;
 }
 
 h1 {
@@ -16,8 +18,9 @@ h1 {
 
 h3 {
     font-size: 20px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Thasadith, "Open Sans", raleway,Verdana, arial, sans-serif;
     color: goldenrod;
+    font-weight: 300;
 }
 
 .sub-title-pages {
@@ -37,9 +40,8 @@ img {
 ul, ol {
     text-align: justify;
     color:goldenrod;
-    background-color: transparent;  
-  
- 
+    background-color: transparent; 
+    line-height: 1,5;
 }
 
 .ol-pages,
@@ -47,6 +49,7 @@ ul, ol {
     text-align: justify;
     color: grey;
     background-color: white;
+    line-height: 1.5;
 }
 
 a {
@@ -61,4 +64,8 @@ p {
 h3,
 .sub-title-pages {
     text-align: justify;
+}
+
+#phases {
+    font-weight: 500;
 }
